--- a/templates/home.html
+++ b/templates/home.html
@@ -4,41 +4,45 @@
 
 <head>
     <title>Teste</title>
-    <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Press+Start+2P&display=swap" rel="stylesheet">
+    {{ template "links" }}
     <style>
         .center {
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-top: 10rem;
+            margin-bottom: auto;
+        }
+        .form-container {
+            display: flex;
+            flex-flow: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 3rem;
+            margin-bottom: auto;
+        }
+        .team-box {
+            padding: 1rem;
         }
     </style>
 </head>
 
 <body>
-    <div class="center">
-        <div class="nes-table-responsive is-centered">
-            <table class="nes-table is-bordered" style="margin-top: 1rem;">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Nome</th>
-                        <th>Sprite</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{ range. }}
-                    <tr>
-                        <td>{{ .ID }}</td>
-                        <td>{{ .Species.Name }}</td>
-                        <td><img src="{{ .Sprite.FrontDefault }}" /></td>
-                    </tr>
-                    {{ end }}
-                </tbody>
-            </table>
+    <form class="form-container">
+        <div>
+            <h2 class="">
+                Gerar time aleatório 
+            </h2>
         </div>
+        <div>
+            <button hx-get="/team" 
+                    hx-target="#team-div"
+                    class="nes-btn is-primary">
+                Gerar
+            </button>
+        </div>
+    </form>
+    <div id="team-div" class="center">
     </div>
 </body>
 
