add ability to swap a pokemon

--- a/pkg/components/pages_component.templ
+++ b/pkg/components/pages_component.templ
@@ -45,7 +45,7 @@ templ HomePage() {
 templ GameSelector() {
     <label for="default_select">Selecione uma Pokedex</label>
     <div class="nes-select">
-        <select name="pokedex" required id="default_select">
+        <select id="pokedex" name="pokedex" required id="default_select">
             <option value="1">Todas as Pokedexes</option>
             <option value="2">Red/Blue/Yellow</option>
             <option value="3">Gold/Silver/Crystal</option>
