--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+
 .center {
     display: flex;
     justify-content: center;
@@ -17,4 +18,22 @@
 
 .team-box {
     padding: 1rem;
+}
+
+.pokemon-box {
+    margin: 1rem;
+    row-gap: 3rem;
+}
+
+
+.pokemon-controls {
+    display: flex;
+    flex-flow: row;
+    row-gap: 1rem;
+    justify-content: center;
+    margin-top: 0.5rem;
+}
+
+.pokemon-controls p {
+    margin: 0.5rem;
 }
