--- a/pkg/components/pages_component.templ
+++ b/pkg/components/pages_component.templ
@@ -9,8 +9,13 @@ templ scripts() {
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Press+Start+2P&display=swap" rel="stylesheet" />
 <link href="static/css/style.css" rel="stylesheet" />
+
+<!--Bootstrap-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 <!--HTMX-->
-<script src="https://unpkg.com/htmx.org@2.0.4"></script>
+<script src="static/js/htmx.min.js"></script>
 }
 
 templ HomePage() {
@@ -18,6 +23,7 @@ templ HomePage() {
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gerar Time</title>
     @scripts()
     <style>
@@ -25,7 +31,7 @@ templ HomePage() {
 </head>
 
 <body>
-    <form class="form-container">
+    <form class="form-container container">
         <div style="display: flex; flex-flow: column; row-gap: 1rem;">
             <h2 style="text-align: center;">
                 <p>Gerar time aleatório</p>
