--- a/pkg/components/team_component.templ
+++ b/pkg/components/team_component.templ
@@ -92,7 +92,7 @@ templ PokemonControls(id int ) {
 
 }
 templ PokemonTypes(pokemonTypes []models.PokemonType) {
-    <div style="margin-top: 1rem; width: 100%; font-size: 1rem; justify-content: center; text-align: center; display: flex;">
+    <div style="gap: 0.2rem; margin-top: 1rem; width: 100%; font-size: 1rem; justify-content: center; text-align: center; display: flex;">
             for _, t := range pokemonTypes {
                 <div class="nes-badge is-small" style="font-size: 0.5rem; display: flex; flex-flow: column; text-align: center; justify-content: center;">
                     <span class={fmt.Sprintf("is-%s-type", t.Type.Name)} style="color: white; -webkit-text-stroke: 0.1px;">{ t.Type.Name }</span>
